Añadido grafico boxplot sigma

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -135,6 +135,9 @@ SESSION.timeInterval = Maximum minute interval
 SESSION.xAxisTitle   = <b>{0}</b>
 SESSION.yAxisTitle   = <b>Minutes (interval limit: {0})</b>
 
+SIGMA_BOXPLOT.xAxisTitle = Route access
+SIGMA_BOXPLOT.yAxisTitle = Average calification
+
 STACKED_BAR = Stacked Bar
 
 STACKED_BAR.xAxisTitle = {0}
