--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -135,6 +135,9 @@ SESSION.timeInterval = Intervalo m\u00E1ximo de minutos
 SESSION.xAxisTitle   = <b>{0}</b>
 SESSION.yAxisTitle   = <b>Minutos (l\u00EDmite intervalo: {0})</b>
 
+SIGMA_BOXPLOT.xAxisTitle = V\u00EDa de acceso
+SIGMA_BOXPLOT.yAxisTitle = Calificaci\u00F3n media
+
 STACKED_BAR = Barras Apiladas
 
 STACKED_BAR.xAxisTitle = {0}
