Añadido enlace al paper en información de la aplicacón.

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1241,6 +1241,7 @@ text.all                  = Todos
 text.author               = Autores:
 text.betweendates         = Entre {0} y {1} d\u00EDas
 text.cache                = Archivos locales
+text.citepaper            = Citar UBUMonitor
 text.comments             = Comentarios y sugerencias
 text.component            = Componente
 text.confirmation         = Confirmaci\u00F3n
