--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1241,6 +1241,7 @@ text.all                  = All
 text.author               = Authors:
 text.betweendates         = Between {0} and {1} days
 text.cache                = Local Files
+text.citepaper            = Cite UBUMonitor
 text.comments             = Comments and suggestions
 text.component            = Component
 text.confirmation         = Confirmation
