Añadido Violin sigma

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -138,6 +138,9 @@ SESSION.yAxisTitle   = <b>Minutes (interval limit: {0})</b>
 SIGMA_BOXPLOT.xAxisTitle = Route access
 SIGMA_BOXPLOT.yAxisTitle = Average calification
 
+SIGMA_VIOLIN.xAxisTitle = Route access
+SIGMA_VIOLIN.yAxisTitle = Average calification
+
 STACKED_BAR = Stacked Bar
 
 STACKED_BAR.xAxisTitle = {0}
