--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -138,6 +138,9 @@ SESSION.yAxisTitle   = <b>Minutos (l\u00EDmite intervalo: {0})</b>
 SIGMA_BOXPLOT.xAxisTitle = V\u00EDa de acceso
 SIGMA_BOXPLOT.yAxisTitle = Calificaci\u00F3n media
 
+SIGMA_VIOLIN.xAxisTitle = V\u00EDa de acceso
+SIGMA_VIOLIN.yAxisTitle = Calificaci\u00F3n media
+
 STACKED_BAR = Barras Apiladas
 
 STACKED_BAR.xAxisTitle = {0}
