Añadido limites a boxplot y violin al mostrar

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -531,6 +531,8 @@ layout.randomSeed       = Layout -> Random seed
 
 legendActive = Chart legend
 
+limit = Show limits
+
 limitDays = Limit days
 
 limitLevelGradeItem = Grade Item limit level
@@ -1238,6 +1240,7 @@ tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
 tabs.MULTI               = Comparisons
 tabs.RISK                = Risk of dropping out
+tabs.SIGMA               = SIGMA
 
 text.activitycompletion   = Activities completion
 text.all                  = All
