--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -531,6 +531,8 @@ layout.randomSeed       = Dise\u00F1o -> Semilla aleatoria
 
 legendActive = Leyenda del gr\u00E1fico
 
+limit = L\u00EDmite a mostrar
+
 limitDays = L\u00EDmite de d\u00EDas
 
 limitLevelGradeItem = L\u00EDmite nivel Item de calificaci\u00F3n
@@ -1238,6 +1240,7 @@ tabs.GRADES              = An\u00E1lisis visual - Calificaciones
 tabs.LOGS                = An\u00E1lisis visual - Registros
 tabs.MULTI               = Comparaciones
 tabs.RISK                = Riesgo de abandono
+tabs.SIGMA               = SIGMA
 
 text.activitycompletion   = Actividades finalizadas
 text.all                  = Todos
