Modificado los titulos ejes

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1100,6 +1100,9 @@ moreMax = Maximum
 
 noGrade = Zero to unqualified users
 
+noGrade.false = NOT included N/A
+noGrade.true  = included N/A
+
 noGradeAsZero = Zero to unqualified users
 
 noGroup = No groups
