--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1100,6 +1100,9 @@ moreMax = M\u00E1ximo
 
 noGrade = Cero a usuarios sin calificar
 
+noGrade.false = NO incluye S.C
+noGrade.true  = incluye S.C.
+
 noGradeAsZero = Cero a usuarios sin calificar
 
 noGroup = Sin grupos
