Añadido tree maps de los codigos postales en SIGMA

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1,7 +1,15 @@
 
 ACTIVITIES_TABLE = Activity Completion
 
+ANDALUSIA = Andalusia
+
+ARAGON = Aragon
+
+BALEARIC_ISLANDS = Balearics Islands
+
 BARNES_HUT = Barnes Hut
+
+BASQUE_COUNTRY = Basque Country
 
 BOXPLOT = Boxplot
 
@@ -40,6 +48,20 @@ CALIFICATION_BAR = Grades %
 CALIFICATION_BAR.xAxisTitle = Grade items
 CALIFICATION_BAR.yAxisTitle = Enrolled user #
 
+CANARY_ISLANDS = Canary Islands
+
+CANTABRIA = Cantabria
+
+CASTILE_AND_LEON = Castile and Leon
+
+CASTILLA_LA_MANCHA = Castilla-La Mancha
+
+CATALONIA = Catalonia
+
+CEUTA = Ceuta
+
+COMMUNITY_OF_MADRID = Community of Madrid
+
 CUM_LINE = Cumulative Log
 
 CUM_LINE.xAxisTitle = {0}
@@ -55,6 +77,8 @@ ENROLLMENT_BAR.yAxisTitle = Enrolled users
 ENROLLMENT_COURSE_NETWORK = Graph
 
 ENROLLMENT_SANKEY = Enrollment flow
+
+EXTREMADURA = Extremadura
 
 FORCE_ATLAS_2_BASED = Force Atlas 2
 
@@ -80,6 +104,8 @@ FORUM_USER_POST_BAR.yAxisTitle = Posts
 
 FORUM_WORD_CLOUD = Word cloud
 
+GALICIA = Galicia
+
 GRADE_REPORT_TABLE = Grades
 
 GROUP_BOXPLOT = Group BoxPlot
@@ -89,6 +115,8 @@ HEAT_MAP = Heatmap
 HEAT_MAP.xAxisTitle = <b>{0}</b>
 
 Hours = Hours
+
+LA_RIOJA = La Rioja
 
 LINE = Lines
 
@@ -100,6 +128,10 @@ MEAN_DIFF = Relative Cum.
 MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Logs
 
+MELILLA = Melilla
+
+NAVARRE = Navarre
+
 PARALLEL_CATEGORY = Cohort flow
 
 POINTS_TABLE = Ratings
@@ -107,6 +139,8 @@ POINTS_TABLE = Ratings
 RADAR = Radar
 
 RANKING_TABLE = Ranking
+
+REGION_OF_MURCIA = Region of Murcia
 
 REPULSION = Repulsion
 
@@ -152,6 +186,8 @@ TOTAL_BAR = Total
 
 TOTAL_BAR.yAxisTitle = Logs
 
+VALENCIAN_COMMUNITY = Valencian Community
+
 VIOLIN = Violin
 
 VIOLIN.xAxisTitle          = Grade items
@@ -173,6 +209,8 @@ alertDaysElapsed = Last update warning time (days)
 angles = Rotation angles (comma separated)
 
 askSendReport = Send bug report? This report is anonymous. Your report will be used to help fix this bug and will never be shared in any commercial context.\r\nFor more information on what is sent, click on "Show details".\r\n\r\nThe data is saved in Microsoft Forms. More information in: 
+
+autonomousCommunity = Autonomous community
 
 backGroundImage = Background image
 
@@ -1208,6 +1246,8 @@ sigma.yearAccess                        = Year access
 sigma.yearsAccess                       = Year access
 sigma.yearsConsumed                     = Calls consumed
 sigma.yearsOld                          = Years old
+
+spain = Spain
 
 standardDeviation = Standard deviation
 
