--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1,7 +1,15 @@
 
 ACTIVITIES_TABLE = Finalizaci\u00F3n Actividad
 
+ANDALUSIA = Andaluc\u00EDa
+
+ARAGON = Arag\u00F3n
+
+BALEARIC_ISLANDS = Islas Baleares
+
 BARNES_HUT = Barnes Hut
+
+BASQUE_COUNTRY = Pa\u00EDs Vasco
 
 BOXPLOT = Boxplot
 
@@ -40,6 +48,20 @@ CALIFICATION_BAR = Calificaciones %
 CALIFICATION_BAR.xAxisTitle = \u00CDtems de calificaci\u00F3n
 CALIFICATION_BAR.yAxisTitle = Usuarios matriculados #
 
+CANARY_ISLANDS = Islas Canarias
+
+CANTABRIA = Cantabria
+
+CASTILE_AND_LEON = Castilla y Le\u00F3n
+
+CASTILLA_LA_MANCHA = Castilla-La Mancha
+
+CATALONIA = Catalu\u00F1a
+
+CEUTA = Ceuta
+
+COMMUNITY_OF_MADRID = Comunidad de Madrid
+
 CUM_LINE = Acumulados
 
 CUM_LINE.xAxisTitle = {0}
@@ -55,6 +77,8 @@ ENROLLMENT_BAR.yAxisTitle = Usuarios matriculados
 ENROLLMENT_COURSE_NETWORK = Grafo
 
 ENROLLMENT_SANKEY = Flujo de matriculaci\u00F3n
+
+EXTREMADURA = Extremadura
 
 FORCE_ATLAS_2_BASED = Force Atlas 2
 
@@ -80,6 +104,8 @@ FORUM_USER_POST_BAR.yAxisTitle = Mensajes
 
 FORUM_WORD_CLOUD = Nube de palabras
 
+GALICIA = Galicia
+
 GRADE_REPORT_TABLE = Calificaciones
 
 GROUP_BOXPLOT = BoxPlot de Grupos
@@ -89,6 +115,8 @@ HEAT_MAP = Heatmap
 HEAT_MAP.xAxisTitle = <b>{0}</b>
 
 Hours = horas
+
+LA_RIOJA = La Rioja
 
 LINE = L\u00EDneas
 
@@ -100,6 +128,10 @@ MEAN_DIFF = Acum. Relativos
 MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Registros
 
+MELILLA = Melilla
+
+NAVARRE = Navarra
+
 PARALLEL_CATEGORY = Flujo por cohorte
 
 POINTS_TABLE = Puntuaciones
@@ -107,6 +139,8 @@ POINTS_TABLE = Puntuaciones
 RADAR = Radar
 
 RANKING_TABLE = Clasificaci\u00F3n
+
+REGION_OF_MURCIA = Regi\u00F3n de Murcia
 
 REPULSION = Repulsi\u00F3n
 
@@ -152,6 +186,8 @@ TOTAL_BAR = Total
 
 TOTAL_BAR.yAxisTitle = Registros
 
+VALENCIAN_COMMUNITY = Comunidad Valenciana
+
 VIOLIN = Violin
 
 VIOLIN.xAxisTitle          = \u00CDtems de calificaci\u00F3n
@@ -173,6 +209,8 @@ alertDaysElapsed = Aviso de \u00FAltima actualizaci\u00F3n (en d\u00EDas)
 angles = \u00C1ngulos de rotaci\u00F3n (separado por comas)
 
 askSendReport = \u00BFEnviar informe de errores? Este informe es an\u00F3nimo. Su informe se utilizar\u00E1 para ayudar a solucionar este error y nunca se compartir\u00E1 en ning\u00FAn contexto comercial.\r\nPara m\u00E1s informaci\u00F3n sobre lo que se env\u00EDa, haz clic en "Mostrar detalles".\r\n\r\nLos datos se guardan en Microsoft Forms. Mas informaci\u00F3n en: 
+
+autonomousCommunity = Comunidad Aut\u00F3noma
 
 backGroundImage = Imagen de fondo
 
@@ -1208,6 +1246,8 @@ sigma.yearAccess                        = A\u00F1o de acceso
 sigma.yearsAccess                       = A\u00F1o de acceso
 sigma.yearsConsumed                     = Convocatorias consumidas
 sigma.yearsOld                          = A\u00F1os de edad
+
+spain = Espa\u00F1a
 
 standardDeviation = Desviaci\u00F3n t\u00EDpica
 
