Añadido traducciones pestaña de SIGMA

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -62,6 +62,8 @@ CEUTA = Ceuta
 
 COMMUNITY_OF_MADRID = Community of Madrid
 
+COURSE_ADDRESS_MAP = Study address
+
 CUM_LINE = Cumulative Log
 
 CUM_LINE.xAxisTitle = {0}
@@ -169,8 +171,26 @@ SESSION.timeInterval = Maximum minute interval
 SESSION.xAxisTitle   = <b>{0}</b>
 SESSION.yAxisTitle   = <b>Minutes (interval limit: {0})</b>
 
+SIGMA_BAR = Enrollment profile
+
+SIGMA_BOXPLOT = Boxplot
+
 SIGMA_BOXPLOT.xAxisTitle = Route access
 SIGMA_BOXPLOT.yAxisTitle = Average calification
+
+SIGMA_PARALLEL_GENDER_ACCESS = Access route flow
+
+SIGMA_PARALLEL_YEAR_CONSUMED = Call flow
+
+SIGMA_PIE = Pie chart
+
+SIGMA_STACKED_BAR = Credits
+
+SIGMA_TABLE_ENROLLED = Enrolled students
+
+SIGMA_TABLE_NOT_ENROLLED = Exchange students
+
+SIGMA_VIOLIN = Violin
 
 SIGMA_VIOLIN.xAxisTitle = Route access
 SIGMA_VIOLIN.yAxisTitle = Average calification
@@ -185,6 +205,10 @@ TABLE_LOG = Table
 TOTAL_BAR = Total
 
 TOTAL_BAR.yAxisTitle = Logs
+
+UNKNOWN = Unknown
+
+USUAL_ADDRESS_MAP = Usual address
 
 VALENCIAN_COMMUNITY = Valencian Community
 
