--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -62,6 +62,8 @@ CEUTA = Ceuta
 
 COMMUNITY_OF_MADRID = Comunidad de Madrid
 
+COURSE_ADDRESS_MAP = Direcci\u00F3n estudiando
+
 CUM_LINE = Acumulados
 
 CUM_LINE.xAxisTitle = {0}
@@ -169,8 +171,26 @@ SESSION.timeInterval = Intervalo m\u00E1ximo de minutos
 SESSION.xAxisTitle   = <b>{0}</b>
 SESSION.yAxisTitle   = <b>Minutos (l\u00EDmite intervalo: {0})</b>
 
+SIGMA_BAR = Perfil de matriculaci\u00F3n
+
+SIGMA_BOXPLOT = Boxplot
+
 SIGMA_BOXPLOT.xAxisTitle = V\u00EDa de acceso
 SIGMA_BOXPLOT.yAxisTitle = Calificaci\u00F3n media
+
+SIGMA_PARALLEL_GENDER_ACCESS = Flujo por v\u00EDa de acceso
+
+SIGMA_PARALLEL_YEAR_CONSUMED = Flujo por convocatorias
+
+SIGMA_PIE = Sectores
+
+SIGMA_STACKED_BAR = Cr\u00E9ditos
+
+SIGMA_TABLE_ENROLLED = Estudiantes matriculados
+
+SIGMA_TABLE_NOT_ENROLLED = Estudiantes en intercambio
+
+SIGMA_VIOLIN = Viol\u00EDn
 
 SIGMA_VIOLIN.xAxisTitle = V\u00EDa de acceso
 SIGMA_VIOLIN.yAxisTitle = Calificaci\u00F3n media
@@ -185,6 +205,10 @@ TABLE_LOG = Tabla
 TOTAL_BAR = Total
 
 TOTAL_BAR.yAxisTitle = Registros
+
+UNKNOWN = Desconocido
+
+USUAL_ADDRESS_MAP = Direcci\u00F3n habitual
 
 VALENCIAN_COMMUNITY = Comunidad Valenciana
 
