--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1233,8 +1233,10 @@ showNumberPosts = Mostrar n\u00FAmero de mensajes
 showPassword = Mostrar contrase\u00F1a
 
 sigma.DNI                               = DNI
+sigma.accessRoute                       = V\u00EDa de acceso
 sigma.basicAndObligatory                = Cr\u00E9ditos b\u00E1sicos y obligatorios matriculados
 sigma.basicAndObligatoryCreditsEnrolled = N\u00FAmero de cr\u00E9ditos de formaci\u00F3n b\u00E1sica y obligatorios matriculados en este curso
+sigma.callsConsumed                     = Convocatorias consumidas
 sigma.center                            = Centro
 sigma.courseAddress                     = Direcci\u00F3n durante el curso
 sigma.courseNumberCreditsEnrolled       = N\u00FAmero cr\u00E9ditos matriculados en este curso
@@ -1255,7 +1257,6 @@ sigma.observations                      = Observaciones del alumno/a
 sigma.optionalCredits                   = Cr\u00E9ditos opcionales matriculados
 sigma.optionalSubjects                  = Asignaturas optativas superadas
 sigma.period                            = Periodo
-sigma.routeAccess                       = V\u00EDa de acceso
 sigma.speciality                        = Especialidad
 sigma.studyPlan                         = Plan de estudio
 sigma.studyPlanCredits                  = N\u00FAmero de cr\u00E9ditos del plan de estudios
@@ -1268,7 +1269,6 @@ sigma.usualAddress                      = Direcci\u00F3n habitual
 sigma.usualPhone                        = Tel\u00E9fono habitual
 sigma.yearAccess                        = A\u00F1o de acceso
 sigma.yearsAccess                       = A\u00F1o de acceso
-sigma.yearsConsumed                     = Convocatorias consumidas
 sigma.yearsOld                          = A\u00F1os de edad
 
 spain = Espa\u00F1a
