Correccion de traducciones

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1257,6 +1257,7 @@ sigma.observations                      = Observations
 sigma.optionalCredits                   = Optional credits enrolled
 sigma.optionalSubjects                  = Optional sibject passed
 sigma.period                            = Period
+sigma.routeAccess                       = Route access
 sigma.speciality                        = Speciality
 sigma.studyPlan                         = Study plan
 sigma.studyPlanCredits                  = Study plan credits
@@ -1269,6 +1270,7 @@ sigma.usualAddress                      = Usual address
 sigma.usualPhone                        = Usual phone
 sigma.yearAccess                        = Year access
 sigma.yearsAccess                       = Year access
+sigma.yearsConsumed                     = Calls consumed
 sigma.yearsOld                          = Years old
 
 spain = Spain
