--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1257,6 +1257,7 @@ sigma.observations                      = Observaciones del alumno/a
 sigma.optionalCredits                   = Cr\u00E9ditos opcionales matriculados
 sigma.optionalSubjects                  = Asignaturas optativas superadas
 sigma.period                            = Periodo
+sigma.routeAccess                       = V\u00EDa de acceso
 sigma.speciality                        = Especialidad
 sigma.studyPlan                         = Plan de estudio
 sigma.studyPlanCredits                  = N\u00FAmero de cr\u00E9ditos del plan de estudios
@@ -1269,6 +1270,7 @@ sigma.usualAddress                      = Direcci\u00F3n habitual
 sigma.usualPhone                        = Tel\u00E9fono habitual
 sigma.yearAccess                        = A\u00F1o de acceso
 sigma.yearsAccess                       = A\u00F1o de acceso
+sigma.yearsConsumed                     = Convocatorias consumidas
 sigma.yearsOld                          = A\u00F1os de edad
 
 spain = Espa\u00F1a
