Añadido en el nombres de eje Y en Perfil de Matriculacion

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1253,6 +1253,7 @@ sigma.group                             = Group
 sigma.internationalProgram              = International program
 sigma.numberCreditsPassed               = Number credits passed
 sigma.numberOfEnrols                    = Enrollments
+sigma.numberUsers                       = Enrolled users
 sigma.observations                      = Observations
 sigma.optionalCredits                   = Optional credits enrolled
 sigma.optionalSubjects                  = Optional sibject passed
