Añadido cita en la ventana de inicio de sesión

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1391,6 +1391,7 @@ timeInterval = Maximum minute interval
 title.passwordChanged   = Password was changed
 title.passwordIncorrect = Password incorrect
 
+tooltip.cite             = Cite UBUMonitor
 tooltip.exportcourse     = Export selected course
 tooltip.groups           = Group
 tooltip.groups.          = Group:
