--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1391,6 +1391,7 @@ timeInterval = Intervalo maximo de minutos
 title.passwordChanged   = Contrase\u00F1a modificada
 title.passwordIncorrect = Contrase\u00F1a incorrecta
 
+tooltip.cite             = Citar UBUMonitor
 tooltip.exportcourse     = Exportar curso seleccionado
 tooltip.groups           = Grupo
 tooltip.groups.          = Grupo:
